add navbar and hamburgerBtn with logic and styles

--- a/index.html
+++ b/index.html
@@ -19,13 +19,57 @@
     <body>
 
         <header class="header">
-            <nav class="navbar">Navbar</nav>
+            <nav class="header__navbarSection navbarSection">
+
+                <div class="navbarSection__logoAndNumbers logoAndNumbers">
+
+                    <figure class="logoAndNumbers__logo logo">
+                        <img class="logo__img" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp"
+                            alt="image of a small tree with green leaves which represents an orange tree in respect of the logo image of Orange Tree Car Wash and Valet">
+                        <figcaption>
+                            <p class="logo__text">Nylstroom <br class="logo__breakLine">Pest Control</p>
+                        </figcaption>
+                    </figure>
+
+                </div>
+
+                <button class="navbar__hamburgerBtn hamburgerBtn">
+                    <span class="hamburgerBtn__hamburgerBar hamburgerBar hamburgerBtn__hamburgerBar--top"></span>
+                    <span class="hamburgerBtn__hamburgerBar hamburgerBar hamburgerBtn__hamburgerBar--middle"></span>
+                    <span class="hamburgerBtn__hamburgerBar hamburgerBar hamburgerBtn__hamburgerBar--bottom"></span>
+                </button>
+
+                <ul class="navbar__navList navList navList--displayNone">
+                    <div class="navFrame"></div>
+                    <li class="navList__navItem navItem navItem1">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#home">Home</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem2">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#about">About</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem3">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#service">Services</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem4">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#google">Process</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem5">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#contact">Social Media</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem6">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#trading">Contact</a>
+                    </li>
+                    <li class="navList__navItem navItem navItem7">
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#social">Google Maps</a>
+                    </li>
+                </ul>
+            </nav>
             <section class="header__hero hero">
                 <div class="hero__heroCtaContainer">
                     <h1 class="hero__heroHeading heroHeading">
                         <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
                             <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
-                            <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom Pest Control</span> 
+                            <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom <br class="heroHeadingPrimary__lineBreak">Pest Control</span> 
                         </span>
                         <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
                     </h1>
@@ -278,7 +322,7 @@
             <figure class="footer__figure">
                 <img class="footer__logoImg" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp" alt="">
                 <figcaption class="footer__figcaption">
-                    <h3 class="footer__headingH3 headingH3 headingH3--footerFigure">Nylstroom Pest <br>Control</h3>
+                    <h3 class="footer__headingH3 headingH3 headingH3--footerFigure">Nylstroom <br class="footer__figureLineBreak">Pest Control</h3>
                 </figcaption>
             </figure>
             <nav class="footer__footerNavigationContainer">
