change line height and add margin top to footerDeveloperParagraph

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h1 class="hero__heroHeading heroHeading">
                         <span class="heroHeading__heroHeadingPrimary heroHeadingPrimary">
                             <img class="heroHeadingPrimary__heroHeadingPrimaryLogoImg" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp" alt="Logo image of Nylstroom Pest Control in Modimolle." >
-                            <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstoom <br class="heroHeadingPrimary__lineBreak">Pest Control</span> 
+                            <span class="heroHeadingPrimary__heroHeadingPrimaryText">Nylstroom <br class="heroHeadingPrimary__lineBreak">Pest Control</span> 
                         </span>
                         <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
                     </h1>
