change font-size and responsiveness of footerCopyright

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 <p class="footer__paragraph paragraph paragraph--address">Address: 86 Pleinstraat, Modimolle, 0510</p>
             </address>
             <div class="footer__footerCopyrightAndDevContainer">
-                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy:</span> <span>2024</span> <span>Nylstroom Pest Control</span> </p>
+                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy;</span> <span>2024</span> <span>Nylstroom Pest Control</span> </p>
                 <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
                     designed and developed by: 
                     <a class="navlink navlink--footerNavlinkDev" href="https://schalkvandyk.com" target="_blank">
