--- a/index.html
+++ b/index.html
@@ -365,9 +365,37 @@
             </nav>
             <address class="footer__footerAddressContainer">
                 <h3 class="footer__footerHeadingH3 headingH3 headingH3--websiteNavigation">Contact Details</h3>
-                <p class="footer__paragraph paragraph paragraph--address">Mobile: 0745110199</p>
-                <p class="footer__paragraph paragraph paragraph--address">Email: jtk217@mweb.co.za</p>
-                <p class="footer__paragraph paragraph paragraph--address">Address: 86 Pleinstraat, Modimolle, 0510</p>
+                <div class="footer__footerContactDetailItem">
+                    <p class="footer__footerContactDetailHeading paragraph paragraph--footerAddress">Mobile</p>
+                    <a id="footerMobileContactLink" class="footer__footerContactDetailLink" href="https://api.whatsapp.com/send?phone=+27745110199&text=Hi.%20I%20would%20like%20to%20book%20a%20consult%20for%20a%20quote.%20Please%20contact%20me." target="_blank">
+                        <svg class="footer__footerContactDetailIcon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M17.7071 13.7071L20.3552 16.3552C20.7113 16.7113 20.7113 17.2887 20.3552 17.6448C18.43 19.57 15.3821 19.7866 13.204 18.153L11.6286 16.9714C9.88504 15.6638 8.33622 14.115 7.02857 12.3714L5.84701 10.796C4.21341 8.61788 4.43001 5.56999 6.35523 3.64477C6.71133 3.28867 7.28867 3.28867 7.64477 3.64477L10.2929 6.29289C10.6834 6.68342 10.6834 7.31658 10.2929 7.70711L9.27175 8.72825C9.10946 8.89054 9.06923 9.13846 9.17187 9.34373C10.3585 11.7171 12.2829 13.6415 14.6563 14.8281C14.8615 14.9308 15.1095 14.8905 15.2717 14.7283L16.2929 13.7071C16.6834 13.3166 17.3166 13.3166 17.7071 13.7071Z" stroke="#001d49" stroke-width="2"/>
+                        </svg>
+                        <p class="footer__paragraph paragraph paragraph--footerAddressDetail">0745110199</p>
+                    </a>
+                </div>
+                <div class="footer__footerContactDetailItem">
+                    <p class="footer__footerContactDetailHeading paragraph paragraph--footerAddress">Email</p>
+                    <a class="footer__footerContactDetailLink" href="mailto: info@nylstroompest.co.za" target="_blank">
+                        <svg class="footer__footerContactDetailIcon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <rect x="4" y="6" width="16" height="12" rx="2" stroke="#001d49" stroke-width="2"/>
+                            <path d="M4 9L11.1056 12.5528C11.6686 12.8343 12.3314 12.8343 12.8944 12.5528L20 9" stroke="#001d49" stroke-width="2"/>
+                        </svg>
+                        <p class="footer__paragraph paragraph paragraph--footerAddressDetail">info@nylstroompest.co.za</p>
+                    </a>
+                </div>
+                <div class="footer__footerContactDetailItem">
+                    <p class="footer__footerContactDetailHeading paragraph paragraph--footerAddress">Address</p>
+                    <a class="footer__footerContactDetailLink" href="https://maps.app.goo.gl/FJoWryNnHtGoKcjV8" target="_blank">
+                        <svg class="footer__footerContactDetailIcon contact__contactDetailIcon--address" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M3 6.2C3 5.07989 3 4.51984 3.21799 4.09202C3.40973 3.71569 3.71569 3.40973 4.09202 3.21799C4.51984 3 5.0799 3 6.2 3H17.8C18.9201 3 19.4802 3 19.908 3.21799C20.2843 3.40973 20.5903 3.71569 20.782 4.09202C21 4.51984 21 5.0799 21 6.2V17.8C21 18.9201 21 19.4802 20.782 19.908C20.5903 20.2843 20.2843 20.5903 19.908 20.782C19.4802 21 18.9201 21 17.8 21H6.2C5.07989 21 4.51984 21 4.09202 20.782C3.71569 20.5903 3.40973 20.2843 3.21799 19.908C3 19.4802 3 18.9201 3 17.8V6.2Z" stroke="#001d49" stroke-width="2" stroke-linecap="round"/>
+                            <path d="M19 21L15 6.5" stroke="#001d49" stroke-width="2"/>
+                            <path d="M21 6L3 8" stroke="#001d49" stroke-width="2"/>
+                            <path d="M13 14.0882C13 15.9272 11.2611 17.2334 10.4311 17.7521C10.1647 17.9186 9.83526 17.9186 9.56892 17.7521C8.7389 17.2334 7 15.9272 7 14.0882C7 12.2353 8.4536 11 10 11C11.6 11 13 12.2353 13 14.0882Z" stroke="#001d49" stroke-width="2"/>
+                        </svg>
+                        <p class="footer__paragraph paragraph paragraph--footerAddressDetail">86 Pleinstraat, Modimolle, 0510</p>
+                    </a>
+                </div>
             </address>
             <div class="footer__footerCopyrightAndDevContainer">
                 <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy;</span> <span>2024</span> <span>Nylstroom Pest Control</span> </p>
