--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                         <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#google">Process</a>
                     </li>
                     <li class="navList__navItem navItem navItem5">
-                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#contact">Social Media</a>
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#">Social Media</a>
                     </li>
                     <li class="navList__navItem navItem navItem6">
                         <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#trading">Contact</a>
                     </li>
                     <li class="navList__navItem navItem navItem7">
-                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#social">Google Maps</a>
+                        <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#googleMapsLink">Google Maps</a>
                     </li>
                 </ul>
             </nav>
@@ -73,7 +73,7 @@
                         </span>
                         <span class="heroHeading__heroHeadingByline">Serving Nylstroom, Naboomspruit, Vaalwater, Warmbad, Leeupoort and surrounding areas. From specialized IPM programs for food and health industries to commercial and domestic pest control, rodent control, termite management, and efficient fumigation services.</span>
                     </h1>
-                    <a class="hero__heroBtnContainer" href="#contactLink" target="_blank">
+                    <a class="hero__heroBtnContainer" href="#contactLink">
                         <button class="btn btn--primary">Contact Us</button>
                     </a>
                 </div>
@@ -171,8 +171,8 @@
                                 expertise extends to store product pests, weed control, and bird proofing. </p>
                         </li>
                     </ul>
-                    <a class="services__servicesDetailItem" href="#contactLink" target="_blank">
-                        <button class="btn btn--secondary">How It Works</button>
+                    <a class="services__servicesDetailItem" href="#contactLink">
+                        <button class="btn btn--secondary">Contact Us</button>
                     </a>
                     <article class="services__servicesArticle services__servicesArticle--serviceArea">
                         <h3 class="services__serviceArticleHeadingH3 headingH3 headingH3--mobileservices">Serving Your Waterberg Community</h3>
@@ -192,7 +192,7 @@
                                 <li><p class="services__paragraph paragraph paragraph--serviceAreaName"><span class="paragraph__serviceAreaName--leeupoort">Leeupoort</span>.</p></li>
                             </ul>
                         </article>
-                        <a class="services__servicesDetailItem" href="#contactLink" target="_blank">
+                        <a class="services__servicesDetailItem" href="#contactLink">
                             <button class="btn btn--secondary">Contact Us</button>
                         </a>
                     </article>
@@ -264,6 +264,7 @@
             </section>
         </aside>
         <address class="address__contact contact">
+            <div id="contactLink" class="divLink divLink__contactLink"></div>
             <h2 class="contact__headingH2 headingH2 headingH2--contact">Contact Us</h2>
             <p class="contact__paragraph paragraph paragraph--contact">Have a pest 
                 problem in Modimolle? Reach out to Nylstroom Pest Control for swift 
