fix footer website navigation links

--- a/index.html
+++ b/index.html
@@ -356,11 +356,13 @@
                     <article class="footer__footerWebsiteNavigationContainer">
                         <h3 class="footer__footerHeadingH3 headingH3 headingH3--websiteNavigation">Website Navigation</h3>
                         <ul class="footer__footerNavlist">
-                            <li class="footer__footerNavitem"><a href="" class="footer__footerNavlink navlink navlink--footerNavlink">Home &rarr;</a></li>
-                            <li class="footer__footerNavitem"><a href="" class="footer__footerNavlink navlink navlink--footerNavlink">About &rarr;</a></li>
-                            <li class="footer__footerNavitem"><a href="" class="footer__footerNavlink navlink navlink--footerNavlink">Products &rarr;</a></li>
-                            <li class="footer__footerNavitem"><a href="" class="footer__footerNavlink navlink navlink--footerNavlink">Services &rarr;</a></li>
-                            <li class="footer__footerNavitem"><a href="" class="footer__footerNavlink navlink navlink--footerNavlink">Contact &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#homeLink" class="footer__footerNavlink navlink navlink--footerNavlink">Home &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#aboutLink" class="footer__footerNavlink navlink navlink--footerNavlink">About &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#serviceLink" class="footer__footerNavlink navlink navlink--footerNavlink">Services &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#processLink" class="footer__footerNavlink navlink navlink--footerNavlink">Process &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#socialLink" class="footer__footerNavlink navlink navlink--footerNavlink">Social Media &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#contactLink" class="footer__footerNavlink navlink navlink--footerNavlink">Contact &rarr;</a></li>
+                            <li class="footer__footerNavitem"><a href="#googleMapsLink" class="footer__footerNavlink navlink navlink--footerNavlink">Google Maps &rarr;</a></li>
                         </ul>
                     </article>
                     <article class="footer__footerLegalNoticeContainer">
