fix name of owner and manager

--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
                     <figure class="about__figure">
                         <img class="about__figureImg about__img--figureImgOwner" src="./img/Images/WebsiteImages/NylstroomPestProfilePhotoJohan.webp" alt="">
                         <figcaption class="about__figcaption">
-                            <h3 class="about__headingH3 headingH3 headingH3--aboutOwner">Johan du Plessis</h3>
+                            <h3 class="about__headingH3 headingH3 headingH3--aboutOwner">Johan de Villiers</h3>
                             <h4 class="about__headingH4 headingH4 headingH4--aboutOwner">Owner & Manager</h4>
-                            <p class="about__paragraph paragraph paragraph--aboutOwner">Johan du Plessis, 
+                            <p class="about__paragraph paragraph paragraph--aboutOwner">Johan de Villiers, 
                                 owner and manager of Nylstroom Pest Control, brings over 25 years of 
                                 invaluable experience in the pest control industry to the table. As a 
                                 resident of Nylstroom, Johan's deep understanding of local 
