insert descriptions for all the alt atributes on website img elements

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a class="navList__navLink navLink navLink--hamburgerMenuNavlink" href="#homeLink">
                         <figure class="logoAndNumbers__logo logo">
                             <img class="logo__img" src="./img/Images/WebsiteImages/NylstroomPestLogo500by500.webp"
-                                alt="image of a small tree with green leaves which represents an orange tree in respect of the logo image of Orange Tree Car Wash and Valet">
+                                alt="Logo image of Nylstroom Pets Control in Modimolle.">
                             <figcaption>
                                 <p class="logo__text">Nylstroom <br class="logo__breakLine">Pest Control</p>
                             </figcaption>
@@ -85,13 +85,13 @@
                     <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture and Member of the South African Pest Control Association</p>
                     <div class="hero__figureContainer">
                         <figure class="hero__figure">
-                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestDeptAgriLogo.webp" alt="">
+                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestDeptAgriLogo.webp" alt="Logo image of Depart of Agriculture in South Africa inside the credentials section to indicate that Nylstroom Pest Control is registered with the Department of Agriculture.">
                             <figcaption class="hero__figcaption">
                                 <p class="hero__paragraph paragraph paragraph--heroFigcaption">Registered with <br>Department of Agriculture</p>
                             </figcaption>
                         </figure>
                         <figure class="hero__figure">
-                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestSAPCA.webp" alt="">
+                            <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestSAPCA.webp" alt="Logo image of the South African Pest Control Association inside the credentials section to indicate that Nylstroom Pest Control is registered member of SAPCA.">
                             <figcaption class="hero__figcaption">
                                 <p class="hero__paragraph paragraph paragraph--heroFigcaption">Member of <br>South African Pest Control Association</p>
                             </figcaption>
@@ -115,7 +115,7 @@
                     dedication. Count on us to safeguard your home or business 
                     against unwanted intruders.</p>
                 <figure class="about__figure">
-                    <img class="about__figureImg about__img--figureImgOwner" src="./img/Images/WebsiteImages/NylstroomPestProfilePhotoJohan.webp" alt="">
+                    <img class="about__figureImg about__img--figureImgOwner" src="./img/Images/WebsiteImages/NylstroomPestProfilePhotoJohan.webp" alt="Profile photo of Johan de Villiers, the owner and manager of Nylstroom Pest Control.">
                     <figcaption class="about__figcaption">
                         <h3 class="about__headingH3 headingH3 headingH3--aboutOwner">Johan de Villiers</h3>
                         <h4 class="about__headingH4 headingH4 headingH4--aboutOwner">Owner & Manager</h4>
@@ -182,7 +182,7 @@
                         <h3 class="services__serviceArticleHeadingH3 headingH3 headingH3--mobileservices">Serving Your Waterberg Community</h3>
                         <div class="services__articleContentWrapper">
                             <div class="services__servicesImageAndIntroContainer">
-                                <img class="services__serviceArticleImage" src="./img/Images/WebsiteImages/NylstroomPestWaterbergServiceAreasBigMap.webp" alt="">
+                                <img class="services__serviceArticleImage" src="./img/Images/WebsiteImages/NylstroomPestWaterbergServiceAreasBigMap.webp" alt="A photo of a map of the Waterberg District in Limpopo with pin drops on the service areas Nylstrom Pest Control service.">
                                 <p class="services__serviceArticleIntroParagraph paragraph paragraph--serviceArea">Our dedicated 
                                     team is committed to creating pest-free environments, ensuring the well-being 
                                     of your Waterberg community. Trust us for effective and reliable pest control tailored 
