delete all references to SAPCA in index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="hero__heroCredentialsContainer">
                     <h3 class="hero__headingH3 headingH3 headingH3--heroCredentials">Certified & Accredited:</h3>
-                    <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture and Member of the South African Pest Control Association</p>
+                    <p class="hero__paragraph paragraph paragraph--heroCredentials">Registered with Department of Agriculture</p>
                     <div class="hero__figureContainer">
                         <figure class="hero__figure">
                             <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestDeptAgriLogo.webp" alt="Logo image of Depart of Agriculture in South Africa inside the credentials section to indicate that Nylstroom Pest Control is registered with the Department of Agriculture.">
@@ -90,12 +90,12 @@
                                 <p class="hero__paragraph paragraph paragraph--heroFigcaption">Registered with <br>Department of Agriculture</p>
                             </figcaption>
                         </figure>
-                        <figure class="hero__figure">
+                        <!-- <figure class="hero__figure">
                             <img class="hero__heroFigureImg" src="./img/Images/WebsiteImages/NylstroomPestSAPCA.webp" alt="Logo image of the South African Pest Control Association inside the credentials section to indicate that Nylstroom Pest Control is registered member of SAPCA.">
                             <figcaption class="hero__figcaption">
                                 <p class="hero__paragraph paragraph paragraph--heroFigcaption">Member of <br>South African Pest Control Association</p>
                             </figcaption>
-                        </figure>
+                        </figure> -->
                     </div>
                 </div>
             </section>
@@ -109,10 +109,18 @@
                     based in Modimolle, is your trusted ally in eliminating pests and 
                     ensuring a pest-free environment. With a commitment to excellence, 
                     we offer professional pest control services tailored to meet your 
-                    specific needs. Our team, registered with the Department of 
+                    specific needs. 
+                    
+                    <!-- Our team, registered with the Department of 
                     Agriculture and proud members of the South African Pest Control 
                     Association, delivers effective solutions with expertise and 
-                    dedication. Count on us to safeguard your home or business 
+                    dedication.  -->
+
+                    Our team is registered with the Department of 
+                    Agriculture and delivers effective solutions with expertise and 
+                    dedication. 
+                    
+                    Count on us to safeguard your home or business 
                     against unwanted intruders.</p>
                 <figure class="about__figure">
                     <img class="about__figureImg about__img--figureImgOwner" src="./img/Images/WebsiteImages/NylstroomPestProfilePhotoJohan.webp" alt="Profile photo of Johan de Villiers, the owner and manager of Nylstroom Pest Control.">
