add copyright year logic and convert to ES Modules

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 </div>
             </address>
             <div class="footer__footerCopyrightAndDevContainer">
-                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy;</span> <span>2024</span> <span>Nylstroom Pest Control</span> </p>
+                <p class="footer__footerCopyrightParagraph paragraph paragraph--footerCopyright"><span>Copyright &copy;</span> <span class="copyrightDate">2024</span> <span>Nylstroom Pest Control</span> </p>
                 <p class="footer__footerDeveloperParagraph paragraph paragraph--footerDeveloper">
                     designed and developed by: 
                     <a class="navlink navlink--footerNavlinkDev" href="https://schalkvandyk.com" target="_blank">
@@ -441,7 +441,7 @@
         </footer>
 
         <!-- import an external script app.js -->
-        <script src="app.js"></script>        
+        <script type="module" src="./public/js/app.js"></script>        
     </body>
 
 </html>
